# zouna-editor

./: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.svelte-kit/: ambient.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  read_game.rs
src/lib/: Container.svelte  File.svelte  Property.svelte  scene.js
src/routes/: +page.svelte
static/: boombox.glb
