[package]
name = "src-tauri"
version = "0.1.0"
description = "zouna editor proof of concept"
authors = ["pizzart"]
license = ""
repository = ""
default-run = "src-tauri"
edition = "2021"
# resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["dialog-all", "fs-all"] }
walkdir = "2.3.3"
dpc = { git = "https://github.com/pizzart/libdpc" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
